force-app/main/default/objects/clofor_com_cfs__WMSBillLoan__c/fields/clofor_com_cfs__LoanID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanID__c</fullName>
    <label>LOAN ID</label>
    <referenceTo>clofor_com_cfs__Loan__c</referenceTo>
    <relationshipLabel>WMS BILL+LOAN</relationshipLabel>
    <relationshipName>WMSBillLoan</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>