force-app/main/default/objects/clofor_com_cfs__WMSBillLoan__c/fields/clofor_com_cfs__WMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>WMS UNPAID BAL OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>